// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TelemetryController POST /telemetry with empty or invalid arguments returns a 422 1`] = `
Object {
  "error": "Unprocessable Entity",
  "message": Array [
    "points.0.measurement should not be empty",
    "points.0.name should not be empty",
    "points.0.tags.0.name must be a string",
    "points.0.tags.0.name should not be empty",
    "points.0.tags.0.value must be a string",
    "points.0.tags.0.value should not be empty",
    "points.0.value must be a positive number",
  ],
  "statusCode": 422,
}
`;

exports[`TelemetryController POST /telemetry with missing arguments returns a 422 1`] = `
Object {
  "error": "Unprocessable Entity",
  "message": Array [
    "points must contain not more than 3000 elements",
    "points must be an array",
  ],
  "statusCode": 422,
}
`;
